<resources>
    <string name="app_name">EatHub</string>
    <string name="title_activity_home">EatHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="update_information">Update Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="nearby_Restaurant">Nearby Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="money_sign">₹</string>
    <string name="search">Search</string>
    <string name="menu_fav">Favorites</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="your_order">Your Order</string>
    <string name="title_activity_nearby_restaurant">Map</string>
    <string name="Sort">Sort</string>
    <string name="Cuisines">Cuisines</string>
    <string name="Cost">Cost</string>
    <string name="Ratings">Ratings</string>
    <string name="topSliderDelivery">Top cuisines for you</string>
    <string name="topSliderDineOut">Curated Collections for you</string>

</resources>