<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_grey_restaurant_24"
            android:title="@string/nearby_Restaurant" />
    </group>


    <group>
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_grey_favorite"
            android:title="@string/menu_fav" />
    </group>

    <group>
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_grey_history"
            android:title="@string/order_history" />
    </group>

    <group>
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_grey_update_info"
            android:title="@string/update_information" />
    </group>

    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_grey_signout"
            android:title="@string/sign_out" />
    </group>

</menu>